--- a/src/components/add/add.css
+++ b/src/components/add/add.css
@@ -15,3 +15,15 @@ outline: none;
 border-radius: 8px;
 cursor: pointer;
 }
+@media (max-width:678px) {
+  .btn-add{
+    width: 100%;
+    padding: 10px;
+    margin-top: 15px;
+  }
+  input{
+    width: 100% !important;
+  height: 30px;
+
+  }
+}
